--- a/src/index.css
+++ b/src/index.css
@@ -276,8 +276,22 @@ nav {
   color: var(--primary-700);
   transform: rotate(90deg);
 }
-.logo {
-  height: 40px;
+.title {
+  display: flex;
+  align-items: baseline;
+}
+
+.title h5 {
+  padding-left: 0.5rem;
+  color: var(--primary-500);
+  font-weight: 400;
+}
+.title h4 {
+  font-weight: 400;
+}
+.title h4,
+.title h5 {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .links a {
@@ -299,4 +313,49 @@ nav {
 .links-container {
   overflow: hidden;
   transition: var(--transition);
+}
+.social-icons {
+  display: none;
+}
+
+@media screen and (min-width: 800px) {
+  .nav-toggle {
+    display: none;
+  }
+  .nav-header {
+    padding: 0;
+  }
+  .nav-center {
+    max-width: 1170px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+  }
+  .links-container {
+    height: auto !important;
+  }
+  .links {
+    display: flex;
+    gap: 0.5rem;
+  }
+  .links a {
+    padding: 0;
+  }
+  .links a:hover {
+    padding: 0;
+    background: transparent;
+  }
+  .social-icons {
+    display: flex;
+    gap: 0.5rem;
+  }
+  .social-icons a {
+    color: var(--primary-500);
+    transition: var(--transition);
+  }
+  .social-icons a:hover {
+    color: var(--primary-300);
+  }
 }
